# ai-market-prediction

./: .env  README.md  ai-prediction-least-square-error.py  ai-prediction-lstm-adagrad.py  ai-prediction-test.py  ai-prediction-test2.py  ai-trader-api-test.py  config.py  pyproject.toml  recorder2.py  run.py
alembic/: env.py
app/: __init__.py
app/broker/: models.py  polygon_client.py  schema.py
app/data/: recorder.py  schema.py
app/ml/: prediction.py
app/shared/: models.py
app/shared/bases/: base_model.py  base_schema.py
app/shared/registry/: model_registry.py
finals/data/: SPY_2023-04-14_time_series.csv  SPY_2023-04-17_time_series.csv
old/: ai-prediction-adagrad.py  ai-prediction-binary_crossentropy.py  ai-prediction-caret.py  recorder.py  recorder2.py
